--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,5 +1,9 @@
 <h2>List of ratings</h2>
 
+<p>
+  Number of ratings: <%= @ratings.count %>
+</p>
+
 <ul>
   <% @ratings.each do |rating| %>
     <li><%= rating %> <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' } %></li>
