Rating new fixd

--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -9,5 +9,6 @@
     <li><%= rating %> <%= link_to rating.user.username, rating.user %></li>
   <% end %>
 </ul>
-
-<%= link_to 'New rating', new_rating_path %>
+<% if not current_user.nil? %>
+    <%= link_to 'New rating', new_rating_path %>
+<% end %>
