--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -6,26 +6,21 @@
       <th>Name</th>
       <th>Founded</th>
       <th>City</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @beer_clubs.each do |beer_club| %>
       <tr>
-        <td><%= beer_club.name %></td>
+        <td><%= link_to beer_club.name, beer_club %></td>
         <td><%= beer_club.founded %></td>
         <td><%= beer_club.city %></td>
-        <td><%= link_to 'Show', beer_club %></td>
-        <td><%= link_to 'Edit', edit_beer_club_path(beer_club) %></td>
-        <td><%= link_to 'Destroy', beer_club, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Beer club', new_beer_club_path %>
+<% if not current_user.nil? %>
+    <%= link_to 'New Beer club', new_beer_club_path %>
+<% end %>
