--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -16,4 +16,5 @@
 </ul>
 
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
+<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', beer_clubs_path %>
