--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -22,4 +22,5 @@
 </p>
 
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
+<%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', beers_path %>
