--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,17 +3,13 @@
   <thead>
     <tr>
       <th>Username</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to user.username,user %></td>
       </tr>
     <% end %>
   </tbody>
