--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -26,5 +26,10 @@
       Has <%= pluralize(@brewery.ratings.count, 'rating') %>, average <%= @brewery.average_rating %>
   <% end %>
 </p>
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+<% if not current_user.nil? %>
+    <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+    <% if current_user.admin %>
+        <%= link_to 'Destroy', @brewery, method: :delete, data: { confirm: 'Are you sure?' } %> |
+    <% end %>
+<% end %>
 <%= link_to 'Back', breweries_path %>
