--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -20,7 +20,10 @@
     Has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= @beer.average_rating %>
   <% end %>
 </p>
-
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% if not current_user.nil? %>
+    <%= link_to 'Edit', edit_beer_path(@beer) %> |
+    <% if current_user.admin %>
+        <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %> |
+    <% end %>
+<% end %>
 <%= link_to 'Back', beers_path %>
