--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -11,8 +11,8 @@
           </ul>
         </div>
     <% end %>
-
-    <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, 'to_s') %>
+    beer:
+    <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s, selected: @rating.beer_id) %><br>
     score: <%= f.number_field :score %>
     <%= f.submit %>
 <% end %>
