--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -20,10 +20,23 @@
     Has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= @beer.average_rating %>
   <% end %>
 </p>
-<% if not current_user.nil? %>
-    <%= link_to 'Edit', edit_beer_path(@beer) %> |
+
+<% if current_user %>
+
+
+   <% if not current_user.beers.include? @beer %>
+        <h4>give a rating:</h4>
+        <%= form_for(@rating) do |f| %>
+            <%= f.hidden_field :beer_id %>
+            score: <%= f.number_field :score %>
+            <%= f.submit %>
+        <% end %>
+    <% end %>
+    <%= link_to 'Edit', edit_beer_path(@beer) %>
+    <br>
     <% if current_user.admin %>
-        <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %> |
+        <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <br>
     <% end %>
 <% end %>
 <%= link_to 'Back', beers_path %>
