--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing of Beer Clubs</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,6 +21,6 @@
 </table>
 
 <br>
-<% if not current_user.nil? %>
-    <%= link_to 'New Beer club', new_beer_club_path %>
+<% if current_user %>
+    <%= link_to 'New Beer club', new_beer_club_path, class:'btn btn-primary' %>
 <% end %>
