--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -20,13 +20,11 @@
     <% if not @beer_club.users.include? current_user %>
         <%= form_for(@membership) do |f| %>
             <%= f.hidden_field :beer_club_id %>
-            <%= f.submit value:"join the club" %>
+            <%= f.submit value:"Join the club", class:'btn btn-primary' %>
         <% end %>
         <br>
     <% end %>
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
-    <% if current_user.admin %>
-        <%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %>
+    <%= edit_and_destroy_buttons(@beer_club) %>
+
 <% end %>
 <%= link_to 'Back', beer_clubs_path %>
