--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing beers</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
+      <th><%= link_to 'Name', beers_path(order:"name") %></th>
+      <th><%= link_to 'Style', beers_path(order:"style") %></th>
+      <th><%= link_to 'Brewery', beers_path(order:"brewery") %></th>
     </tr>
   </thead>
 
@@ -21,5 +21,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Beer', new_beer_path %>
+<% if current_user %>
+<%= link_to 'New Beer', new_beer_path, class:"btn btn-primary" %>
+<% end %>
