--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,7 +1,4 @@
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+<h1><%= @beer.name %></h1>
 
 <p>
   <strong>Style:</strong>
@@ -17,7 +14,7 @@
   <% if @beer.ratings.empty? %>
     Beer has not yet been rated!
   <% else %>
-    Has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= @beer.average_rating %>
+    Has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= round @beer.average_rating %>
   <% end %>
 </p>
 
@@ -29,14 +26,10 @@
         <%= form_for(@rating) do |f| %>
             <%= f.hidden_field :beer_id %>
             score: <%= f.number_field :score %>
-            <%= f.submit %>
+            <%= f.submit class:'btn btn-primary' %>
         <% end %>
     <% end %>
-    <%= link_to 'Edit', edit_beer_path(@beer) %>
     <br>
-    <% if current_user.admin %>
-        <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <br>
-    <% end %>
+    <%= edit_and_destroy_buttons(@beer) %>
 <% end %>
 <%= link_to 'Back', beers_path %>
