--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,28 +1,73 @@
-<h2>List of ratings</h2>
-
-<p>
-  Number of ratings: <%= @ratings.count %>
-</p>
-
-<table>
-  <thead>
-    <tr>
-      <th>Beer</th>
-      <th>Score</th>
-      <th>Rater</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @ratings.each do |rating| %>
-    <tr>
-      <td><%= link_to rating.beer.name, rating.beer %></td>
-      <td><%= rating.score %></td>
-      <td><%= link_to rating.user.username, rating.user %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<h1>Rating statistics</h1>
+<div class="row">
+  <div class="col-md-4">
+    <h2>Best beers</h2>
+    <%= render 'list', items: @top_beers %>
+  </div>
+  <div class="col-md-4">
+    <h2>Best breweries</h2>
+    <%= render 'list', items: @top_breweries %>
+  </div>
+  <div class="col-md-4">
+    <h2>Best styles</h2>
+    <%= render 'list', items: @top_styles %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Most active users</h2>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Favorite beer</th>
+          <th>Preferred style</th>
+          <th>Favorite brewery</th>
+          <th>Ratings</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @top_users.each do |u| %>
+        <tr>
+          <td><%= link_to u, u %></td>
+          <% if u.ratings.any? %>
+          <td><%= link_to u.favorite_beer.name, u.favorite_beer %></td>
+          <td><%= link_to u.favorite_style, u.favorite_style %></td>
+          <td><%= link_to u.favorite_brewery, u.favorite_brewery %></td>
+          <% else %>
+          <td></td>
+          <td></td>
+          <td></td>
+          <% end %>
+          <td><%= u.ratings.count %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h2>Recent ratings</h2>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+            <th>User</th>
+            <th>Beer</th>
+            <th>Score</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @last_ratings.each do |r| %>
+        <tr>
+          <td><%= link_to r.beer.name, r.beer %></td>
+          <td><%= link_to r.user, r.user %></td>
+          <td><%= r.score %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <br/>
 <% if not current_user.nil? %>
-    <%= link_to 'New rating', new_rating_path %>
+    <%= link_to 'New rating', new_rating_path, class:'btn btn-primary' %>
 <% end %>
