--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing styles</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -22,5 +22,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Style', new_style_path %>
+<% if current_user %>
+<%= link_to 'New Style', new_style_path, class:"btn btn-primary" %>
+<% end %>
