--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing users</h1>
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Username</th>
@@ -17,4 +17,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, class:"btn btn-primary" %>
